# SegmentadorSOM

./: .gitignore  CMakeLists.txt  Makefile  README.md  SegmentadorSOM  breastCancer_10_10k.csv  compila_g++.txt  configs.csv  configs_default.csv  data_breastCancerDataset.csv  main.cpp  makefile  mapa.txt  saida_1000_0.1k_openmp.txt  saida_1000_10k_openmp.txt  saida_1000_1k_openmp.txt  saida_100_10k_openmp.txt  saida_100_20k_openmp.txt  saida_100_30k_openmp.txt  saida_10_10k_openmp.txt  saida_10_20k_openmp.txt  saida_10_30k_openmp.txt  saida_Version.txt  saida_breastCancer_10_10k.txt  saida_cake.txt  saida_help.txt  teste2_orig.csv  teste_default.csv  teste_orig.csv  traducoes.h  versao.h
Arquivos/: Arquivo.cpp  Arquivo.h  ArquivoCSV.cpp  ArquivoCSV.h  ArquivoCSV_configs.cpp  ArquivoCSV_configs.h  ArquivoCSV_dados.cpp  ArquivoCSV_dados.h  Arquivo_Arranjo.cpp  Arquivo_Arranjo.h  Arquivo_String.cpp  Arquivo_String.h
Calculos/: Calculos.cpp  Calculos.h
Codificador/: ConjuntoDados.cpp  ConjuntoDados.h  Dado.cpp  Dado.h
Controlador/: Controlador.cpp  Controlador.h  ControladorSegmentadorSOM.cpp  ControladorSegmentadorSOM.h
SOM/: Arranjo.cpp  Arranjo.h  MensagensSOM.cpp  Neuronio.cpp  Neuronio.h  SOM.cpp  SOM.h
Visualizacao/: MapaContextual.cpp  MapaContextual.h  Visualizacao.cpp  Visualizacao.h
_resultados/: breastCancer_100_10k.csv  breastCancer_100_1k.csv  breastCancer_50_10k.csv  breastCancer_50_1k.csv  breastCancer_75_1k.csv  breastCancer_mod_100_1k.csv  breastCancer_mod_100_1k.xlsx  breastCancer_mod_75_10k.csv  breastCancer_mod_75_10k.xlsx  breastCancer_mod_75_1k.csv  breastCancer_mod_75_1k.xlsx  iris.data_100_1k.csv  iris.data_100_1k.xlsx  iris.data_30_10k.csv  iris.data_30_10k.xlsx  iris.data_30_1k.csv  iris.data_30_1k.xlsx  iris.data_45_10k.csv  iris.data_45_10k.xlsx  iris.data_45_1k.csv  iris.data_45_1k.xlsx  iris.data_55_10k.csv  iris.data_55_10k.xlsx  iris.data_55_1k.csv  iris.data_55_1k.xlsx  mapa_breastCancer_75_1k.txt  mapa_breastCancer_mod_75_1k.txt  mapa_iris.data_45_1k.txt  mapa_teste2_orig_10_10k.txt  mapa_teste_10_10k.txt  saida_breastCancer_100_10k.txt  saida_breastCancer_100_1k.txt  saida_breastCancer_50_10k.txt  saida_breastCancer_50_1k.txt  saida_breastCancer_75_1k.txt  saida_breastCancer_mod_100_1k.txt  saida_breastCancer_mod_75_10k.txt  saida_breastCancer_mod_75_1k.txt  saida_iris.data_100_1k.txt  saida_iris.data_30_10k.txt  (+12 more)
